--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -6,8 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion"
-      xmlns:sf="http://xmlns.jcp.org/jsf/composite/selectorfecha">
+      xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion">
 <ui:composition template="/template/administracion/dashboard.xhtml">
     <ui:define name="menu">
         <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="">
@@ -25,13 +24,6 @@
                     <li><h:link outcome="catalogo-coordinacion"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.catalog.coordinator']}</span></h:link></li>
                 </ul>
             </li>
-            <li class="uk-parent">
-                <h:link><h:outputText pt:uk-icon="database" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.coordinator']}</span></h:link>
-                <ul class="uk-nav-sub">
-                    <li><h:link outcome="dashboard-coordinador"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.dashboard']}</span></h:link></li>
-                    <li><h:link outcome="detalle-profesor"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.admingroup']}</span></h:link></li>
-                </ul>
-            </li>
         </ul>
     </ui:define>
     <ui:define name="contenido">
@@ -40,8 +32,6 @@
         <h:outputStylesheet library="css" name="administracion/scroll-esquadron.css"/>
         <h:outputStylesheet library="css" name="administracion/dashboard.css"/>
         <h:outputStylesheet library="css" name="/administracion/date-picker.css"/>
-
-
         <div class="uk-card uk-card-default uk-card-small uk-card-hover">
             <div class="uk-card-header">
                 <div class="uk-grid uk-grid-small">
@@ -368,7 +358,7 @@
                                                         <h:outputText pt:uk-icon="icon: file-edit" styleClass="uk-margin-small-right uk-icon" />
                                                         <span class="uk-text-middle"><h:outputText value="#{boton['edit']}"/></span>
                                                         <f:setPropertyActionListener value="#{licencia}" target="#{licenciasControlador.licenciaModelo}"/>
-                                                        <f:ajax render="formulario-modifica-licencia"/>
+                                                        <f:ajax render="formulario-modifica-licencia" onevent="function funcion(data) { creaFechaSelector(data, null); }"/>
                                                     </h:commandLink>
                                                 </li>
                                                 <ui:fragment rendered="#{licenciasControlador.htmlDataTable.rowIndex eq licenciasControlador.htmlDataTable.rows}">
@@ -530,7 +520,7 @@
                         </p>
                     </div>
                     <div class="uk-modal-body uk-flex uk-flex-center">
-                        <sf:selector-fecha fecha="#{licenciasControlador.licenciaModelo.inicio}"/>
+
                     </div>
                     <div class="uk-modal-footer uk-flex uk-flex-right">
                         <button class="uk-button uk-button-default uk-modal-close" type="button">#{boton['cancel']}</button>
@@ -600,6 +590,13 @@
                     selectorFecha.creaSelector(value);
                 });
             });
+
+            function creaFechaSelector(data, componente) {
+                if (data.status === 'success') {
+                    var selectorFecha = new SelectorFecha();
+                    selectorFecha.creaSelector(modalLicencia.querySelector('.uk-modal-body'));
+                }
+            }
 
             function limpiaSelect(data) {
                 if (typeof data === 'undefined') {
