--- a/tecolotl-administracion/src/main/resources/ConfirmacionNuevoCoordinador.html
+++ b/tecolotl-administracion/src/main/resources/ConfirmacionNuevoCoordinador.html
@@ -1,8 +1,8 @@
 <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Didact+Gothic&display=swap" rel="stylesheet">
 
-<div style="background: green; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-        <div style="position: relative; display:flex; margin: 30px auto 50px calc(100% - 90%);" >
+<div style="background: cornsilk; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+        <div style="position: relative; display:flex; margin: 0px auto 50px calc(100% - 90%);" >
             <svg width="100px" height="100px" version="1.1" viewBox="0 0 212.6 212.6" xmlns="http://www.w3.org/2000/svg">
                 <g transform="translate(0 -839.76)">
                     <g transform="translate(1.4296 20.162)">
