Se agregan las vistas de alumno - login, dashboard

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -10,7 +10,8 @@
 	<title>Esquadron</title>
 </h:head>
 <h:body>
-	<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/>
-	<h:link value="Coordinador" outcome="/coordinador/dashboard.xhtml"/>
+	<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/><br/>
+	<h:link value="Coordinador" outcome="/coordinador/dashboard.xhtml"/><br/>
+	<h:link value="Alumno" outcome="/alumno/inicio-sesion.xhtml"/>
 </h:body>
 </html>
