--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -65,7 +65,7 @@
                             <div class="uk-card-header">
                                 <div class="uk-grid-small uk-flex-middle" uk-grid="">
                                     <div class="uk-width-auto">
-                                        <h:graphicImage styleClass="uk-border-circle" width="50" height="50" library="img" name="monstruo.svg"/>
+                                        <h:graphicImage styleClass="uk-border-circle" width="50" height="50" library="img" name="mounstro/morado.svg"/>
                                     </div>
                                     <div class="uk-width-expand">
                                         <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-uppercase uk-text-bold">maugg</h3>
@@ -99,33 +99,28 @@
                     <div class="uk-width-2-3@m">
                         <div class="uk-section uk-border-rounded border-section uk-padding-remove color-card-dashboard-alumno" style="position:relative;padding-top:52.25%;">
                             <div style="position:relative;padding-top:52.25%;" class="uk-margin-auto">
-                                <!--<iframe src="https://www.youtube-nocookie.com/embed/YE7VzlLtp-4?autoplay=0&amp;showinfo=0&amp;rel=0&amp;modestbranding=1&amp;playsinline=1" frameborder="0" allowfullscreen-->
-                                <!--style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>-->
-
                                 <iframe src="https://youtu.be/0_1NU60qHWs"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
                                 <iframe src="https://www.youtube.com/embed/0_1NU60qHWs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
-
                             </div>
                         </div>
-
                     </div>
                     <div class="uk-margin-auto"><h1 class="lescuadron letra-titulo">Realiza tus tareas</h1></div>
                     <div class="uk-width-1-1@m fondo-comic5" style="margin-left: 40px; padding: 40px 0; border: 6px solid white;">
                         <div class="uk-grid uk-child-width-1-3@m" uk-grid="">
                             <div>
                                 <div class="uk-flex uk-flex-center uk-grid"  >
-                                    <h:graphicImage styleClass="img-alumno-dashboard  " library="img" name="Who.svg" alt="moustrou naranja" pt:uk-tooltip="title: Grammar; pos: right "  />
+                                    <h:graphicImage styleClass="img-alumno-dashboard  " library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: Grammar; pos: right "  />
                                     <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="60" max="100"/></div>
                                 </div>
                             </div>
                             <div>
                                 <div class="uk-flex uk-flex-center uk-grid" >
-                                    <h:graphicImage styleClass="img-alumno-dashboard " library="img" name="Whom1.svg" alt="moustrou naranja"  pt:uk-tooltip="title: Listening; pos: right "  />
+                                    <h:graphicImage styleClass="img-alumno-dashboard " library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: Listening; pos: right "  />
                                     <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color2" value="60" max="100"/></div>                                    </div>
                             </div>
                             <div>
                                 <div class="uk-flex uk-flex-center  uk-grid"  >
-                                    <h:graphicImage styleClass="img-alumno-dashboard " library="img" name="Whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: Reading; pos: right "  />
+                                    <h:graphicImage styleClass="img-alumno-dashboard " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: Reading; pos: right "  />
                                     <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color3" value="60" max="100"/></div>
                                 </div>
                             </div>
@@ -135,13 +130,13 @@
                         <div class="uk-grid uk-child-width-1-2@m " uk-grid="">
                             <div class="fondo-comic" style=";border: 6px solid white; padding: 20px 0;">
                                 <div class="uk-flex uk-flex-center uk-grid" >
-                                    <h:graphicImage styleClass="img-alumno-dashboard "  library="img" name="3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: Writing ; pos: right "/>
+                                    <h:graphicImage styleClass="img-alumno-dashboard "  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: Writing ; pos: right "/>
                                     <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color4" value="60" max="100"/></div>
                                 </div>
                             </div>
                             <div class="fondo-comic4 " style=";border: 6px solid white; padding: 20px 0;">
                                 <div class="uk-flex uk-flex-center  uk-grid" >
-                                    <h:graphicImage styleClass="img-alumno-dashboard " library="img" name="verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: Mental map; pos: right "/>
+                                    <h:graphicImage styleClass="img-alumno-dashboard " library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: Mental map; pos: right "/>
                                     <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="60" max="100"/></div>
                                 </div>
                             </div>
