--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -15,6 +15,7 @@
                 <h6 class="uk-text-center uk-margin-remove-vertical text-light">John Doe</h6>
 
                 <div class="uk-position-relative uk-text-center uk-display-block">
+                    <!--Modificar los datos para mostrar en el Alumno-->
                     <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Admin</a>
                     <!-- user dropdown -->
                     <div class="uk-dropdown user-drop" data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
