--- a/tecolotl-web/src/main/webapp/profesor/dashboard-maestro.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard-maestro.xhtml
@@ -163,6 +163,7 @@
             <h:form id="formulario-detalle-profesor" styleClass="uk-form-stacked">
 
                 <div class="uk-overflow-auto uk-margin-small-top">
+                    <!--  Modificar aqui de acuerdo al profesor  -->
                     <h:dataTable
                             value="#{detalleProfesorControlador.collectionDataModel}"
                             binding="#{detalleProfesorControlador.htmlDataTable}"
