--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -12,6 +12,7 @@
 <h:body>
 	<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/><br/>
 	<h:link value="Coordinador" outcome="/coordinador/dashboard.xhtml"/><br/>
-	<h:link value="Alumno" outcome="/alumno/inicio-sesion.xhtml"/>
+	<h:link value="Alumno" outcome="/alumno/inicio-sesion.xhtml"/><br/>
+	<h:link value="profesor" outcome="/profesor/dashboard-maestro.xhtml"/>
 </h:body>
 </html>
