--- a/tecolotl-web/src/main/webapp/colaborador/GlosarioFormulario.xhtml
+++ b/tecolotl-web/src/main/webapp/colaborador/GlosarioFormulario.xhtml
@@ -11,7 +11,9 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
     <title>Actividades</title>
     <h:outputStylesheet library="css" name="uikit.css"/>
@@ -56,10 +58,77 @@
         <div class="uk-modal-dialog">
             <button class="uk-modal-close-default" type="button" uk-close=""/>
             <div class="uk-modal-header">
-                <h2 class="uk-modal-title">Headline 1</h2>
+                <h2 class="uk-modal-title">Actividad</h2>
             </div>
             <div class="uk-modal-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h:form styleClass="uk-form-stacked">
+                    <div class="uk-margin">
+                        <label class="uk-form-label" for="form-IdVideo">ID Video</label>
+                        <div class="uk-form-controls">
+                            <h:inputText styleClass="uk-input" id="form-IdVideo" pt:placeholder="ID Video"/>
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <label class="uk-form-label" for="form-Score">Score</label>
+                        <div class="uk-form-controls">
+                            <h:inputText styleClass="uk-input" id="form-Score" pt:placeholder="Example: 100"/>
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <label class="uk-form-label" for="form-learnersType">Learners Type -Select-</label>
+                        <div class="uk-form-controls">
+                            <h:selectOneMenu  styleClass="uk-select" id="form-learnersType" value="#{colaboradorDashboardControlador.actividadModelo.tipoEstudianteModelo.clave}">
+                                <f:selectItems value="#{colaboradorDashboardControlador.tipoEstudianteModeloLista}"
+                                               var="tipoEstudiante"
+                                               itemLabel="#{tipoEstudiante.valor}"
+                                               itemValue="#{tipoEstudiante.clave}"/>
+                            </h:selectOneMenu>
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <label class="uk-form-label" for="form-Time">Time</label>
+                        <div class="uk-form-controls">
+                            <h:inputText styleClass="uk-input" id="form-Time" pt:placeholder="Time in minutes, example: 90"/>
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <label class="uk-form-label" for="form-Question">Question</label>
+                        <div class="uk-form-controls">
+                            <h:inputText styleClass="uk-input" id="form-Question" pt:placeholder="Example: Who is the president of Russia?"/>
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <label class="uk-form-label" for="form-Language">Language</label>
+                        <div class="uk-form-controls">
+                            <h:inputText styleClass="uk-input" id="form-Language" pt:placeholder="Example: Adverbs of Frequency"/>
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <label class="uk-form-label" for="form-Topic">Topic -Select-</label>
+                        <div class="uk-form-controls">
+                            <h:selectOneMenu  styleClass="uk-select" id="form-Topic" value="#{colaboradorDashboardControlador.actividadModelo.temaModelo.clave}">
+                                <f:selectItems value="#{colaboradorDashboardControlador.temaModeloLista}"
+                                               var="tipoTema"
+                                               itemLabel="#{tipoTema.valor}"
+                                               itemValue="#{tipoTema.clave}"/>
+                            </h:selectOneMenu>
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <label class="uk-form-label" for="form-LanguageLevel">Language Level</label>
+                        <div class="uk-form-controls">
+                            <h:selectManyCheckbox value="#{colaboradorDashboardControlador.}">
+
+                            </h:selectManyCheckbox>
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <label class="uk-form-label">Transcript</label>
+                        <div class="uk-form-controls">
+                            <h:inputTextarea styleClass="uk-textarea" rows="30" pt:placeholder="Transcript here, please"/>
+                        </div>
+                    </div>
+                </h:form>
             </div>
             <div class="uk-modal-footer uk-text-right">
                 <button class="uk-button uk-button-primary uk-modal-close" type="button">Cancel</button>
